// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Queries fetches the logined user 1`] = `
Object {
  "data": Object {
    "getUser": Object {
      "email": "Lupe_Predovic7@hotmail.com",
      "firstName": "Delia",
      "lastName": "Bruen",
      "role": "DOCTOR",
      "uid": "3a238cae-f2af-4d4b-bb34-252215b5272e",
    },
  },
  "errors": undefined,
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;

exports[`Queries updates the login user 1`] = `
Object {
  "data": Object {
    "updateUser": Object {
      "firstName": "Kent",
      "lastName": "Handumon",
      "middleName": "a",
      "uid": "3a238cae-f2af-4d4b-bb34-252215b5272e",
    },
  },
  "errors": undefined,
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;
